--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -4,7 +4,7 @@ PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
 BOT_NAME= "Queen_Miku-MD"
-IMAGE_MENU= "https://i.imgur.com/YKVlucn.jpeg"
+IMAGE_MENU= "https://c.top4top.io/p_3235wgt8w1.jpg"
 NUMERO_OWNER= "263714757857"
 OWNER_NAME= "Malvin King"
 DATABASE_URL= ""
