--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,14 +1,11 @@
-OWNER_NAME="Malvin King"
-PREFIX="."
-PUBLIC_MODE='non'
-AUTO_READ_STATUS="non"
-AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "Queen_Miku-MD"
-IMAGE_MENU= "https://c.top4top.io/p_3235wgt8w1.jpg"
-NUMERO_OWNER= "263714757857"
-OWNER_NAME= "Malvin King"
-DATABASE_URL= ""
-WARN_COUNT= ""
-OPENAI_API_KEY= ""
+OWNER_NAME="ALVINO"
+PREFIX="-"
+PUBLIC_MODE='yes'
+AUTO_READ_STATUS="yes"
+AUTO_DOWNLOAD_STATUS=" o"
+BOT_NAME= "Queen_GRACIE-MD"
+IMAGE_MENU= "https://litter.catbox.moe/pt5rht.jpg"
+NUMERO_OWNER= "254743624539"
+WARN_COUNT= "2"
 STARTING_BOT_MESSAGE='yes'
 ANTI_DELETE_MESSAGE='yes'
